examples/negative/parse_errors/L1/reserved_do.ob
MODULE Reserved;

VAR DO: INTEGER;

END Reserved.
